--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,5 +39,17 @@ steps:
    projects: '**/*Test/*.csproj'
    arguments: '--configuration $(buildConfiguration)'
    
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+  inputs:
+   command: publish
+   publishWebProjects: false
+   projects: 'DevOpsApi/WebApiDevOps/WebApiDevOps.csproj'
+   arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+   zipAfterPublish: true
+   
+- task: PublishBuildArtifacts@1
+  displayName: 'publish artifacts'
+   
+   
+
